@@ -48,6 +48,18 @@
 					<button id="cdefault" class="btn">Default</button>
 				</td>
 			</tr>
+			
+			<tr>
+				<td height=30>
+					<font color="8bc53f">Color for Items in Inventory:</font>
+				</td>
+				<td>
+					<input type="color" id="icolor" class="colorbutton">
+				</td>	
+				<td>	
+					<button id="idefault" class="btn">Default</button>
+				</td>
+			</tr>
 
 			<tr>
 				<td height=30>
